<resources>
    <!-- App Name -->
    <string name="app_name">SuChef</string>

    <!-- Strings related to login and Registration -->
    <string name="title_activity_login">SignIn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Re-enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_incorrect">This reconfirmed password is not correct</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_credentials">Please check your credentials</string>
    <string name="title_activity_registration">Registration</string>
    <string name="prompt_newpassward">New passward</string>
    <!-- Strings related to Main Activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings for Favourite Screen-->
    <string name="title_activity_favourite">Favourites</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_mixnmatch">Mix &amp; Match</string>
    <string name="nav_profile">Settings</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Favourite</item>
        <item>Mix &amp; Match</item>
        <item>Settings</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Mix and Match Activity -->
    <string name="mix_search_button">Search</string>
    <string name="mix_search_match_all_ingredients">Search Recipe that match Ingredients</string>
    <!-- Strings related to settings_profile-->
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date_of_Birth</string>
    <string name="update_btn">Update</string>
    <string name="date">Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="utensils_grid">Utensils</string>


    <!-- Strings related to Home screen-->
    <string name="todayrecipe">TODAY\'S RECIPE</string>


    <!-- Strings related to Recipe Detail -->
    <string name="ingredients">Ingredients</string>
    <string name="utensils">Utensils</string>
    <string name="nutrition_value">Nutrition Value</string>
    <string name="methods">Preparation Methods</string>

    <!-- Strings related to Search Page-->
    <string name="title_activity_recipe_detail">Recipe Detail</string>

    <!-- Strings related to Search Page-->
    <string name="title_activity_search">Search Result</string>
    <string name="title_recipe_list">Recipe list</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cuisine_name">Cuisine Name</string>
    <string name="recipe_description">Recipe Description</string>

    <!-- Strings related to Change Password-->
    <string name="current_password">Current Password</string>
</resources>
