<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_page"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/book"
            android:title="@string/nav_favourite" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/mixer"
            android:title="@string/nav_mixnmatch" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/settings"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/arrow"
            android:title="@string/nav_logout" />
    </group>

</menu>
