<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mis571_group_d.suchef.activity.UpdatePasswordActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="Current passward"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/prompt_password" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="New passward"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="344dp"
        android:layout_height="74dp">

        <AutoCompleteTextView
            android:id="@+id/newpassward"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:hint="@string/prompt_newpassward" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_btn" />
</LinearLayout>
